# dbt-airflow-factory

./: .codeclimate.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .tool-versions  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: publish.yml  (+2 more)
dbt_airflow_factory/: __init__.py  airflow_dag_factory.py  builder.py  builder_factory.py  config_utils.py  constants.py  dbt_parameters.py  ingestion.py  k8s_parameters.py  operator.py  tasks.py
dbt_airflow_manifest_parser/: airflow_dag_factory.py  builder.py  builder_factory.py  config_utils.py  dbt_parameters.py  k8s_parameters.py  operator.py  parameters.py  tasks.py
docs/: Makefile  api.rst  changelog.rst  cli.rst  conf.py  configuration.rst  features.rst  index.rst  installation.md  requirements.txt  usage.rst
openspec/: project.md
tests/: README.md  benchmark_performance.py  google_chat_expected_data.txt  manifest.json  manifest_ephemeral.json  manifest_gateway.json  manifest_task_group_tests.json  test_airflow_vars.py  test_config_propagation.py  test_config_propagation_qa.py  test_cosmos_config_translator.py  test_cosmos_execution_config_builder.py  test_cosmos_operator_args_builder.py  test_cosmos_profile_config_builder.py  test_cosmos_project_config_builder.py  test_dag_dependencies.py  test_dag_factory.py  test_dependencies.py  test_eadges.py  test_ephemeral_operator.py  test_graph.py  test_notifications.py  test_task_group.py  test_tasks.py  utils.py
(+77 files in other folders)
